--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-firebaseui": "^4.0.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
+    "react-social-login-buttons": "^3.0.0",
     "redux": "^4.0.4"
   },
   "scripts": {
